fixed js removed global variables added ; after comands added spacing to scripts.js and styles.css added to README.md specs

--- a/css/styles.css
+++ b/css/styles.css
@@ -2,15 +2,18 @@ body{
   background-color: #1C110A;
   color: #D45113;
 }
+
 .start{
   background-image: url(https://wonderfulengineering.com/wp-content/uploads/2013/11/wallpaper_retro_robot.jpg);
   background-size: auto;
   color: rgb(65, 88, 103);
   background-size:cover;
 }
+
 .none{
-  display: none
+  display: none;
 }
+
 #bender1{
   width: 100%;
   max-width: 220px;
@@ -18,6 +21,7 @@ body{
   margin: 25px;
   border-radius: 5px;
 }
+
 #bender2{
   width: 100%;
   max-width: 200px;
